scripts/02_ensemble/slurm-25964.out
Loading parflow-ml/latest
  Loading requirement: openmpi/gcc/4.1.0 parflow/3.9.0 gdal/3.2.1
Traceback (most recent call last):
  File "ensemble_agg.py", line 77, in <module>
    from scalerutils import scaled_ens_Values
  File "/home/qh8373/SBI_TAYLOR/sbi_taylor/scripts/05_utils/scalerutils.py", line 109
    scale_range = setScalarArrayVal(min_val, max_val):
                                                     ^
SyntaxError: invalid syntax
